// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiding the caret Is hidden 1`] = `<DocumentFragment />`;

exports[`Sorted Displays a downwards facing carat when descending 1`] = `
<DocumentFragment>
  <i
    class="PodBrowser-icon-caret-down PodBrowser-table__icon"
  />
</DocumentFragment>
`;

exports[`Sorted Displays an upwards facing carat when ascending 1`] = `
<DocumentFragment>
  <i
    class="PodBrowser-icon-caret-up PodBrowser-table__icon"
  />
</DocumentFragment>
`;

exports[`Unsorted Displays nothing when unsorted 1`] = `
<DocumentFragment>
  <i
    class="PodBrowser-icon-caret-up PodBrowser-table__icon"
  />
</DocumentFragment>
`;
